--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is simple NodeJS app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "serve": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,12 @@
   },
   "homepage": "https://github.com/Alex-g-h/m3-lesson-2#readme",
   "dependencies": {
-    "@types/chalk": "^2.2.0",
-    "@types/yargs": "^17.0.22",
     "chalk": "^4.1.2",
     "yargs": "^17.7.1"
+  },
+  "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/yargs": "^17.0.22",
+    "nodemon": "^2.0.20"
   }
 }
