--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Alex-g-h/m3-lesson-2#readme",
   "dependencies": {
     "chalk": "^4.1.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "yargs": "^17.7.1"
   },
